--- a/css/maincss.css
+++ b/css/maincss.css
@@ -3,50 +3,107 @@
 /* Border Style */
 body {
     margin:0;
+    font-size:18px;
 }
 
-.flex-container {
-    display:flex;
-    flex-wrap:wrap;
+/* Aligned Texts */
+.center-align {
+    text-align:center;
 }
 
+/* Main Header */
 .main-header {
     background-color:blue;
     color:white;
 }
 
-.logo {
+/* Name of brand */
+.brand {
     font-size:30px;
     padding:20px;
 }
 
-nav {
+/* Navbar Flex */
+.nav-header {
     display:flex;
     flex-wrap:wrap;
     justify-content: flex-end;
     align-items: flex-end;
 }
 
-nav > a {
+/* Navbar Links */
+.nav-header > a {
     color: white;
     text-decoration: none;
     padding: 0px 50px 20px 20px;
 }
 
-nav a:hover {
+/* Navbar on mouse hover */
+.nav-header a:hover {
     color: whitesmoke;
     font-weight: bolder;
     font-size:large
 }
 
+/* Main Header */
 .first-header {
     display:flex;
     justify-content: center;
     font-size:50px;
 }
-.first-paragraph {
+
+/* Header text */
+.header-text {
     width:50%;
     margin:auto;
-    font-size:30px;
+    font-size:20px;
     padding-bottom:50px;
+}
+
+/* Container for Column */
+.row {
+    display:flex;
+    flex-wrap:wrap;
+    flex:100%;
+}
+
+/* Some Headings */
+.features {
+    display:flex;
+    justify-content: center;
+}
+.features > h2 { 
+    font-size:45px;
+    color:#667;
+    border-bottom:2px solid blue;
+    padding-bottom:10px;
+}
+
+.divisor {
+    height: 150px;
+    justify-content: center;
+    align-items: center;
+    background-color: blue;
+    color:white;
+}
+/* Multiple coluns */
+.colum25 {
+    flex:25%;
+    padding:50px;
+}
+.colum50 {
+    flex:50%;
+    padding:50px;
+}
+
+.img-adjust{
+    max-width: 100%;
+}
+
+footer {
+    background-color:#667;
+    justify-content: center;
+    align-items: center;
+    height: 80px;
+    color:white;
 }
